updated initial ui bdd test to launch the thought management page

--- a/src/ui/index.html
+++ b/src/ui/index.html
@@ -35,9 +35,10 @@
                     </ul>
                 </div>
             </form>
-
-             <ul>
-            </ul>
+            <section class="thoughts">
+                <ul>
+                </ul>
+            </section>
         </main>
         <aside>
         </aside>
